; ModuleID = '/home/carl/AnghaBench/timescaledb/tsl/src/continuous_aggs/extr_create.c_cagg_create.c'
source_filename = "/home/carl/AnghaBench/timescaledb/tsl/src/continuous_aggs/extr_create.c_cagg_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_33__ = type { %struct.TYPE_34__*, i32*, i32 }
%struct.TYPE_34__ = type { i32, i32 }
%struct.TYPE_35__ = type { i32, %struct.TYPE_35__* }
%struct.TYPE_37__ = type { i32, i32, i32, i32 }
%struct.TYPE_32__ = type { i32, i32 }
%struct.TYPE_36__ = type { i32 }

@NAMEDATALEN = common dso_local global i32 0, align 4
@ContinuousViewOptionRefreshInterval = common dso_local global i64 0, align 8
@NIL = common dso_local global i32 0, align 4
@HYPERTABLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"_materialized_hypertable_%d\00", align 1
@INTERNAL_SCHEMA_NAME = common dso_local global i8* null, align 8
@ContinuousViewOptionCreateGroupIndex = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [17 x i8] c"_partial_view_%d\00", align 1
@.str.2 = private unnamed_addr constant [16 x i8] c"_direct_view_%d\00", align 1
@.str.3 = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_INTERNAL_ERROR = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [45 x i8] c"bad argument to continuous aggregate trigger\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_33__*, %struct.TYPE_35__*, %struct.TYPE_37__*, %struct.TYPE_32__*)* @cagg_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cagg_create(%struct.TYPE_33__* %0, %struct.TYPE_35__* %1, %struct.TYPE_37__* %2, %struct.TYPE_32__* %3) #0 {
  %5 = alloca %struct.TYPE_33__*, align 8
  %6 = alloca %struct.TYPE_35__*, align 8
  %7 = alloca %struct.TYPE_37__*, align 8
  %8 = alloca %struct.TYPE_32__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca %struct.TYPE_36__, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca %struct.TYPE_35__*, align 8
  %17 = alloca %struct.TYPE_35__*, align 8
  %18 = alloca %struct.TYPE_35__*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i32, align 4
  %21 = alloca %struct.TYPE_34__*, align 8
  %22 = alloca %struct.TYPE_34__*, align 8
  %23 = alloca %struct.TYPE_34__*, align 8
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i64, align 8
  %27 = alloca i32, align 4
  %28 = alloca i32*, align 8
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  store %struct.TYPE_33__* %0, %struct.TYPE_33__** %5, align 8
  store %struct.TYPE_35__* %1, %struct.TYPE_35__** %6, align 8
  store %struct.TYPE_37__* %2, %struct.TYPE_37__** %7, align 8
  store %struct.TYPE_32__* %3, %struct.TYPE_32__** %8, align 8
  %31 = load i32, i32* @NAMEDATALEN, align 4
  %32 = zext i32 %31 to i64
  %33 = call i8* @llvm.stacksave()
  store i8* %33, i8** %10, align 8
  %34 = alloca i8, i64 %32, align 16
  store i64 %32, i64* %11, align 8
  store %struct.TYPE_34__* null, %struct.TYPE_34__** %21, align 8
  store %struct.TYPE_34__* null, %struct.TYPE_34__** %22, align 8
  store %struct.TYPE_34__* null, %struct.TYPE_34__** %23, align 8
  %35 = load i32, i32* @NAMEDATALEN, align 4
  %36 = zext i32 %35 to i64
  %37 = alloca i8, i64 %36, align 16
  store i64 %36, i64* %26, align 8
  %38 = load %struct.TYPE_32__*, %struct.TYPE_32__** %8, align 8
  %39 = load i64, i64* @ContinuousViewOptionRefreshInterval, align 8
  %40 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %38, i64 %39
  %41 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %40, i32 0, i32 1
  %42 = load i32, i32* %41, align 4
  %43 = call i32* @DatumGetIntervalP(i32 %42)
  store i32* %43, i32** %28, align 8
  %44 = load %struct.TYPE_37__*, %struct.TYPE_37__** %7, align 8
  %45 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %44, i32 0, i32 3
  %46 = load i32, i32* %45, align 4
  %47 = load %struct.TYPE_37__*, %struct.TYPE_37__** %7, align 8
  %48 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %47, i32 0, i32 2
  %49 = load i32, i32* %48, align 4
  %50 = load %struct.TYPE_32__*, %struct.TYPE_32__** %8, align 8
  %51 = call i32 @get_refresh_lag(i32 %46, i32 %49, %struct.TYPE_32__* %50)
  store i32 %51, i32* %29, align 4
  %52 = load %struct.TYPE_37__*, %struct.TYPE_37__** %7, align 8
  %53 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %52, i32 0, i32 3
  %54 = load i32, i32* %53, align 4
  %55 = load %struct.TYPE_32__*, %struct.TYPE_32__** %8, align 8
  %56 = load %struct.TYPE_37__*, %struct.TYPE_37__** %7, align 8
  %57 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %56, i32 0, i32 2
  %58 = load i32, i32* %57, align 4
  %59 = call i32 @get_max_interval_per_job(i32 %54, %struct.TYPE_32__* %55, i32 %58)
  store i32 %59, i32* %30, align 4
  %60 = load %struct.TYPE_35__*, %struct.TYPE_35__** %6, align 8
  %61 = load %struct.TYPE_33__*, %struct.TYPE_33__** %5, align 8
  %62 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %61, i32 0, i32 2
  %63 = load i32, i32* %62, align 8
  %64 = call i32 @fixup_userview_query_tlist(%struct.TYPE_35__* %60, i32 %63)
  %65 = load i32, i32* @NIL, align 4
  %66 = load i32, i32* @NIL, align 4
  %67 = load %struct.TYPE_35__*, %struct.TYPE_35__** %6, align 8
  %68 = getelementptr inbounds %struct.TYPE_35__, %struct.TYPE_35__* %67, i32 0, i32 1
  %69 = load %struct.TYPE_35__*, %struct.TYPE_35__** %68, align 8
  %70 = call %struct.TYPE_35__* @copyObject(%struct.TYPE_35__* %69)
  %71 = call i32 @mattablecolumninfo_init(%struct.TYPE_36__* %12, i32 %65, i32 %66, %struct.TYPE_35__* %70)
  %72 = load %struct.TYPE_35__*, %struct.TYPE_35__** %6, align 8
  %73 = call i32 @finalizequery_init(i32* %13, %struct.TYPE_35__* %72, %struct.TYPE_36__* %12)
  %74 = load %struct.TYPE_33__*, %struct.TYPE_33__** %5, align 8
  %75 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %74, i32 0, i32 1
  store i32* null, i32** %75, align 8
  %76 = load %struct.TYPE_35__*, %struct.TYPE_35__** %6, align 8
  %77 = getelementptr inbounds %struct.TYPE_35__, %struct.TYPE_35__* %76, i32 0, i32 0
  %78 = load i32, i32* %77, align 8
  %79 = call i32* @list_nth(i32 %78, i32 0)
  store i32* %79, i32** %19, align 8
  %80 = load i32*, i32** %19, align 8
  %81 = load %struct.TYPE_37__*, %struct.TYPE_37__** %7, align 8
  %82 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %81, i32 0, i32 0
  %83 = load i32, i32* %82, align 4
  %84 = call i32 @mattablecolumninfo_addinternal(%struct.TYPE_36__* %12, i32* %80, i32 %83)
  %85 = call i32 (...) @ts_catalog_database_info_get()
  %86 = call i32 @ts_catalog_database_info_become_owner(i32 %85, i32* %14)
  %87 = call i32 (...) @ts_catalog_get()
  %88 = load i32, i32* @HYPERTABLE, align 4
  %89 = call i32 @ts_catalog_table_next_seq_id(i32 %87, i32 %88)
  store i32 %89, i32* %24, align 4
  %90 = call i32 @ts_catalog_restore_user(i32* %14)
  %91 = load i32, i32* %24, align 4
  %92 = call i32 @PRINT_MATINTERNAL_NAME(i8* %34, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %91)
  %93 = load i8*, i8** @INTERNAL_SCHEMA_NAME, align 8
  %94 = call i32 @pstrdup(i8* %93)
  %95 = call i32 @pstrdup(i8* %34)
  %96 = call %struct.TYPE_34__* @makeRangeVar(i32 %94, i32 %95, i32 -1)
  store %struct.TYPE_34__* %96, %struct.TYPE_34__** %22, align 8
  %97 = load %struct.TYPE_32__*, %struct.TYPE_32__** %8, align 8
  %98 = load i64, i64* @ContinuousViewOptionCreateGroupIndex, align 8
  %99 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %97, i64 %98
  %100 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %99, i32 0, i32 0
  %101 = load i32, i32* %100, align 4
  store i32 %101, i32* %15, align 4
  %102 = load i32, i32* %24, align 4
  %103 = load %struct.TYPE_34__*, %struct.TYPE_34__** %22, align 8
  %104 = load %struct.TYPE_37__*, %struct.TYPE_37__** %7, align 8
  %105 = load i32, i32* %15, align 4
  %106 = call i32 @mattablecolumninfo_create_materialization_table(%struct.TYPE_36__* %12, i32 %102, %struct.TYPE_34__* %103, %struct.TYPE_37__* %104, i32 %105, i32* %9)
  %107 = getelementptr inbounds %struct.TYPE_36__, %struct.TYPE_36__* %12, i32 0, i32 0
  %108 = load i32, i32* %107, align 4
  %109 = call %struct.TYPE_35__* @finalizequery_get_select_query(i32* %13, i32 %108, i32* %9)
  store %struct.TYPE_35__* %109, %struct.TYPE_35__** %16, align 8
  %110 = load %struct.TYPE_35__*, %struct.TYPE_35__** %16, align 8
  %111 = load %struct.TYPE_33__*, %struct.TYPE_33__** %5, align 8
  %112 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %111, i32 0, i32 0
  %113 = load %struct.TYPE_34__*, %struct.TYPE_34__** %112, align 8
  %114 = call i32 @create_view_for_query(%struct.TYPE_35__* %110, %struct.TYPE_34__* %113)
  %115 = load %struct.TYPE_35__*, %struct.TYPE_35__** %6, align 8
  %116 = call %struct.TYPE_35__* @mattablecolumninfo_get_partial_select_query(%struct.TYPE_36__* %12, %struct.TYPE_35__* %115)
  store %struct.TYPE_35__* %116, %struct.TYPE_35__** %17, align 8
  %117 = load i32, i32* %24, align 4
  %118 = call i32 @PRINT_MATINTERNAL_NAME(i8* %34, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i32 %117)
  %119 = load i8*, i8** @INTERNAL_SCHEMA_NAME, align 8
  %120 = call i32 @pstrdup(i8* %119)
  %121 = call i32 @pstrdup(i8* %34)
  %122 = call %struct.TYPE_34__* @makeRangeVar(i32 %120, i32 %121, i32 -1)
  store %struct.TYPE_34__* %122, %struct.TYPE_34__** %21, align 8
  %123 = load %struct.TYPE_35__*, %struct.TYPE_35__** %17, align 8
  %124 = load %struct.TYPE_34__*, %struct.TYPE_34__** %21, align 8
  %125 = call i32 @create_view_for_query(%struct.TYPE_35__* %123, %struct.TYPE_34__* %124)
  %126 = load %struct.TYPE_35__*, %struct.TYPE_35__** %6, align 8
  %127 = call %struct.TYPE_35__* @copyObject(%struct.TYPE_35__* %126)
  store %struct.TYPE_35__* %127, %struct.TYPE_35__** %18, align 8
  %128 = load i32, i32* %24, align 4
  %129 = call i32 @PRINT_MATINTERNAL_NAME(i8* %34, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0), i32 %128)
  %130 = load i8*, i8** @INTERNAL_SCHEMA_NAME, align 8
  %131 = call i32 @pstrdup(i8* %130)
  %132 = call i32 @pstrdup(i8* %34)
  %133 = call %struct.TYPE_34__* @makeRangeVar(i32 %131, i32 %132, i32 -1)
  store %struct.TYPE_34__* %133, %struct.TYPE_34__** %23, align 8
  %134 = load %struct.TYPE_35__*, %struct.TYPE_35__** %18, align 8
  %135 = load %struct.TYPE_34__*, %struct.TYPE_34__** %23, align 8
  %136 = call i32 @create_view_for_query(%struct.TYPE_35__* %134, %struct.TYPE_34__* %135)
  %137 = load %struct.TYPE_37__*, %struct.TYPE_37__** %7, align 8
  %138 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %137, i32 0, i32 0
  %139 = load i32, i32* %138, align 4
  %140 = load %struct.TYPE_37__*, %struct.TYPE_37__** %7, align 8
  %141 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %140, i32 0, i32 2
  %142 = load i32, i32* %141, align 4
  %143 = load i32*, i32** %28, align 8
  %144 = call i32 @ts_continuous_agg_job_add(i32 %139, i32 %142, i32* %143)
  store i32 %144, i32* %25, align 4
  %145 = load %struct.TYPE_33__*, %struct.TYPE_33__** %5, align 8
  %146 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %145, i32 0, i32 0
  %147 = load %struct.TYPE_34__*, %struct.TYPE_34__** %146, align 8
  %148 = call i32 @RangeVarGetCreationNamespace(%struct.TYPE_34__* %147)
  store i32 %148, i32* %20, align 4
  %149 = load i32, i32* %24, align 4
  %150 = load %struct.TYPE_37__*, %struct.TYPE_37__** %7, align 8
  %151 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %150, i32 0, i32 0
  %152 = load i32, i32* %151, align 4
  %153 = load i32, i32* %20, align 4
  %154 = call i32 @get_namespace_name(i32 %153)
  %155 = load %struct.TYPE_33__*, %struct.TYPE_33__** %5, align 8
  %156 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %155, i32 0, i32 0
  %157 = load %struct.TYPE_34__*, %struct.TYPE_34__** %156, align 8
  %158 = getelementptr inbounds %struct.TYPE_34__, %struct.TYPE_34__* %157, i32 0, i32 0
  %159 = load i32, i32* %158, align 4
  %160 = load %struct.TYPE_34__*, %struct.TYPE_34__** %21, align 8
  %161 = getelementptr inbounds %struct.TYPE_34__, %struct.TYPE_34__* %160, i32 0, i32 1
  %162 = load i32, i32* %161, align 4
  %163 = load %struct.TYPE_34__*, %struct.TYPE_34__** %21, align 8
  %164 = getelementptr inbounds %struct.TYPE_34__, %struct.TYPE_34__* %163, i32 0, i32 0
  %165 = load i32, i32* %164, align 4
  %166 = load %struct.TYPE_37__*, %struct.TYPE_37__** %7, align 8
  %167 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %166, i32 0, i32 2
  %168 = load i32, i32* %167, align 4
  %169 = load i32, i32* %29, align 4
  %170 = load i32, i32* %30, align 4
  %171 = load i32, i32* %25, align 4
  %172 = load %struct.TYPE_34__*, %struct.TYPE_34__** %23, align 8
  %173 = getelementptr inbounds %struct.TYPE_34__, %struct.TYPE_34__* %172, i32 0, i32 1
  %174 = load i32, i32* %173, align 4
  %175 = load %struct.TYPE_34__*, %struct.TYPE_34__** %23, align 8
  %176 = getelementptr inbounds %struct.TYPE_34__, %struct.TYPE_34__* %175, i32 0, i32 0
  %177 = load i32, i32* %176, align 4
  %178 = call i32 @create_cagg_catlog_entry(i32 %149, i32 %152, i32 %154, i32 %159, i32 %162, i32 %165, i32 %168, i32 %169, i32 %170, i32 %171, i32 %174, i32 %177)
  %179 = load i32, i32* @NAMEDATALEN, align 4
  %180 = load %struct.TYPE_37__*, %struct.TYPE_37__** %7, align 8
  %181 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %180, i32 0, i32 0
  %182 = load i32, i32* %181, align 4
  %183 = call i32 @snprintf(i8* %37, i32 %179, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0), i32 %182)
  store i32 %183, i32* %27, align 4
  %184 = load i32, i32* %27, align 4
  %185 = icmp slt i32 %184, 0
  br i1 %185, label %190, label %186

186:                                              ; preds = %4
  %187 = load i32, i32* %27, align 4
  %188 = load i32, i32* @NAMEDATALEN, align 4
  %189 = icmp sge i32 %187, %188
  br i1 %189, label %190, label %196

190:                                              ; preds = %186, %4
  %191 = load i32, i32* @ERROR, align 4
  %192 = load i32, i32* @ERRCODE_INTERNAL_ERROR, align 4
  %193 = call i32 @errcode(i32 %192)
  %194 = call i32 @errmsg(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.4, i64 0, i64 0))
  %195 = call i32 @ereport(i32 %191, i32 %194)
  br label %196

196:                                              ; preds = %190, %186
  %197 = load %struct.TYPE_37__*, %struct.TYPE_37__** %7, align 8
  %198 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %197, i32 0, i32 1
  %199 = load i32, i32* %198, align 4
  %200 = call i32 @cagg_add_trigger_hypertable(i32 %199, i8* %37)
  %201 = load i8*, i8** %10, align 8
  call void @llvm.stackrestore(i8* %201)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32* @DatumGetIntervalP(i32) #2

declare dso_local i32 @get_refresh_lag(i32, i32, %struct.TYPE_32__*) #2

declare dso_local i32 @get_max_interval_per_job(i32, %struct.TYPE_32__*, i32) #2

declare dso_local i32 @fixup_userview_query_tlist(%struct.TYPE_35__*, i32) #2

declare dso_local i32 @mattablecolumninfo_init(%struct.TYPE_36__*, i32, i32, %struct.TYPE_35__*) #2

declare dso_local %struct.TYPE_35__* @copyObject(%struct.TYPE_35__*) #2

declare dso_local i32 @finalizequery_init(i32*, %struct.TYPE_35__*, %struct.TYPE_36__*) #2

declare dso_local i32* @list_nth(i32, i32) #2

declare dso_local i32 @mattablecolumninfo_addinternal(%struct.TYPE_36__*, i32*, i32) #2

declare dso_local i32 @ts_catalog_database_info_become_owner(i32, i32*) #2

declare dso_local i32 @ts_catalog_database_info_get(...) #2

declare dso_local i32 @ts_catalog_table_next_seq_id(i32, i32) #2

declare dso_local i32 @ts_catalog_get(...) #2

declare dso_local i32 @ts_catalog_restore_user(i32*) #2

declare dso_local i32 @PRINT_MATINTERNAL_NAME(i8*, i8*, i32) #2

declare dso_local %struct.TYPE_34__* @makeRangeVar(i32, i32, i32) #2

declare dso_local i32 @pstrdup(i8*) #2

declare dso_local i32 @mattablecolumninfo_create_materialization_table(%struct.TYPE_36__*, i32, %struct.TYPE_34__*, %struct.TYPE_37__*, i32, i32*) #2

declare dso_local %struct.TYPE_35__* @finalizequery_get_select_query(i32*, i32, i32*) #2

declare dso_local i32 @create_view_for_query(%struct.TYPE_35__*, %struct.TYPE_34__*) #2

declare dso_local %struct.TYPE_35__* @mattablecolumninfo_get_partial_select_query(%struct.TYPE_36__*, %struct.TYPE_35__*) #2

declare dso_local i32 @ts_continuous_agg_job_add(i32, i32, i32*) #2

declare dso_local i32 @RangeVarGetCreationNamespace(%struct.TYPE_34__*) #2

declare dso_local i32 @create_cagg_catlog_entry(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #2

declare dso_local i32 @get_namespace_name(i32) #2

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #2

declare dso_local i32 @ereport(i32, i32) #2

declare dso_local i32 @errcode(i32) #2

declare dso_local i32 @errmsg(i8*) #2

declare dso_local i32 @cagg_add_trigger_hypertable(i32, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
